--- a/symfony_fw/templates/render/control_panel/microservice_deploy_create.html.twig
+++ b/symfony_fw/templates/render/control_panel/microservice_deploy_create.html.twig
@@ -17,13 +17,13 @@
             {{form_row(form.sshPassword, {'dense': "", 'styleType': "outlinedTrailing"})}}
         </div>
         
-        <div class="microservice_deploy_group">
+        <div class="key_group">
             <div class="container">
-                {{form_row(form.keyPublic, {'label': "microserviceDeployFormType_6"})}}
+                {{form_row(form.keyPublic)}}
                 {{form_row(form.removeKeyPublic)}}
             </div>
             <div class="container">
-                {{form_row(form.keyPrivate, {'label': "microserviceDeployFormType_8"})}}
+                {{form_row(form.keyPrivate)}}
                 {{form_row(form.removeKeyPrivate)}}
             </div>
         </div>
