--- a/symfony_fw/templates/render/control_panel/microservice_deploy_profile.html.twig
+++ b/symfony_fw/templates/render/control_panel/microservice_deploy_profile.html.twig
@@ -11,14 +11,14 @@
         {{form_row(form.sshPassword, {'dense': "", 'styleType': "outlinedTrailing", 'resettable': ""})}}
     </div>
 
-    <div class="microservice_deploy_group">
+    <div class="key_group">
         <div class="container">
-            {{form_row(form.keyPublic, {'label': "microserviceDeployFormType_6"})}}
+            {{form_row(form.keyPublic)}}
             {{form_row(form.removeKeyPublic)}}
             <p>{{response.values.keyPublicLabel}}</p>
         </div>
         <div class="container">
-            {{form_row(form.keyPrivate, {'label': "microserviceDeployFormType_8"})}}
+            {{form_row(form.keyPrivate)}}
             {{form_row(form.removeKeyPrivate)}}
             <p>{{response.values.keyPrivateLabel}}</p>
         </div>
