--- a/symfony_fw/templates/render/static/error.html.twig
+++ b/symfony_fw/templates/render/static/error.html.twig
@@ -3,3 +3,12 @@
     <p class="mdc-typography--headline3">{% trans %}error_2{% endtrans %}</p>
     <a class="mdc-button mdc-button--dense mdc-button--raised" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 2, 'urlExtra': ""})}}" type="button">Home</a>
 </div>
+<script nonce="{{php_session.xssProtectionValue}}">
+    "use strict";
+
+    window.addEventListener("DOMContentLoaded", (event) => {
+        document.querySelector("body .column_left_container").remove();
+        document.querySelector("body .column_right_container").remove();
+        document.querySelector("body .column_center_container").className = "mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid__cell--span-12-tablet column_center_container";
+    }, false);
+</script>
