--- a/symfony_fw/public/scss/system/basic.scss
+++ b/symfony_fw/public/scss/system/basic.scss
@@ -815,6 +815,15 @@ pre {
   border-color: $mdcCheckboxUncheckBorderColor !important;
 }
 
+.mdc-radio__native-control:enabled:checked+.mdc-radio__background .mdc-radio__outer-circle, .mdc-radio__native-control:enabled+.mdc-radio__background .mdc-radio__inner-circle {
+  background-color: $mdc-theme-primary !important;
+  border-color: $mdc-theme-primary !important;
+}
+.mdc-radio__native-control:enabled:not(:checked)+.mdc-radio__background .mdc-radio__outer-circle {
+  background-color: $mdcCheckboxUncheckBackgroundColor !important;
+  border-color: $mdcCheckboxUncheckBorderColor !important;
+}
+
 #panel_id_1 {
   .mdc-card__media {
     p {
