--- a/symfony_fw/templates/render/control_panel.html.twig
+++ b/symfony_fw/templates/render/control_panel.html.twig
@@ -233,6 +233,7 @@
                     "sudo npm -g update npm\n\n"~
                     
                     "Chrome and Firefox:\n"~
+                    "wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -\n"~
                     "sudo sh -c 'echo \"deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main\" >> /etc/apt/sources.list.d/google-chrome.list'\n"~
                     "sudo apt-get update\n"~
                     "sudo apt-get install google-chrome-stable firefox\n"~
