--- a/symfony_fw/public/scss/system/basic.scss
+++ b/symfony_fw/public/scss/system/basic.scss
@@ -813,6 +813,10 @@ pre {
   }
 }
 
+.mdc-slider__pin-value-marker {
+  color: $mdcSliderMarkerValueColor;
+}
+
 #panel_id_1 {
   .mdc-card__media {
     p {
