--- a/symfony_fw/public/scss/system/helper.scss
+++ b/symfony_fw/public/scss/system/helper.scss
@@ -48,6 +48,8 @@ $mdcAppBarIconBackgroundColor: rgb(176, 190, 197, 1.0);
 $mdcAppBarIconBorderColor: rgb(0, 0, 0, 0.2);
 $mdcAppBarIconColor: rgb(0, 0, 0, 1.0);
 
+$mdcSliderMarkerValueColor: #ffffff;
+
 $loaderColor1: #008744;
 $loaderColor2: #ffa700;
 $loaderColor3: #d66020;
